--- a/style.css
+++ b/style.css
@@ -26,3 +26,33 @@ h1, h2{
     background-position: center;
     background-size: cover;
 }
+
+.modal {
+    width: 600px;
+    height: 700px;
+    border-radius: 10px;
+    background-color: white;
+    border: 3px solid #6aa396;
+
+    position: fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal button {
+    width: 20px;
+    height: 20ps;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    text-align: center;
+    background: #6aa396;
+}
+
+.modal img{
+    width: 50%;
+}
