--- a/style.css
+++ b/style.css
@@ -31,13 +31,16 @@ h1{
     background-size: cover;
 }
 
+
+
 .modal {
     width: 600px;
     height: 700px;
     border-radius: 10px;
     background-color: white;
     border: 3px solid #6aa396;
-
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 50%;
     left:50%;
@@ -59,4 +62,9 @@ h1{
 
 .modal img{
     width: 50%;
+}
+
+.modal p{
+    padding-left: 20px;
+    font-size: 20px;
 }
